--- a/UAS/Web.config
+++ b/UAS/Web.config
@@ -11,7 +11,7 @@
 	
   <connectionStrings>
 	  <add name="DefaultConnection"
-			  connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=todos;Integrated Security=True;"
+			  connectionString="Data Source=WHALEE\SQLEXPRESS;Initial Catalog=UAS_Pweb_ToDoList;Integrated Security=True;"
 			  providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
